<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".signupndlogin.fragment.SignupCongrates"
android:background="#1a1a1a"
android:padding="30dp"
android:weightSum="3"
android:orientation="vertical">
<ImageView
    android:id="@+id/circle"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_weight="0.4"
    android:layout_gravity="center_horizontal"
    android:src="@drawable/check" />
<TextView
    android:id="@+id/login_text1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:text="@string/congratulation"
    android:layout_gravity="center_horizontal"
    android:textColor="@color/white"
    android:textSize="26sp"
    android:textStyle="bold" />
<TextView
    android:id="@+id/login_text2"
    android:layout_marginTop="5dp"
    android:textAlignment="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    android:text="@string/you_have_successfully_become_photobomb_user"
    android:textColor="@color/text"
    android:textSize="20sp" />
<Button
    android:id="@+id/done"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/button"
    android:text="@string/done"
    android:textSize="15sp"
    android:textAllCaps="false"
    android:textColor="@color/white"
    tools:ignore="TextContrastCheck" />
</LinearLayout>


