<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".signupndlogin.fragment.ForgotPassword"
android:background="@color/black1"
android:orientation="vertical">
<TextView
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:id="@+id/login_text1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:textColor="@color/white"
    android:textSize="24sp"
    android:textStyle="bold" />
<TextView
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:id="@+id/login_text2"
    android:layout_marginTop="5dp"
    android:textAlignment="textStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_your_registered_mobile_number_to_reset_password"
    android:textColor="@color/gray1"
    android:textSize="16sp" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:gravity="center"
    app:boxCornerRadiusBottomEnd="15dp"
    app:boxCornerRadiusTopEnd="15dp"
    app:boxCornerRadiusBottomStart="15dp"
    app:boxCornerRadiusTopStart="15dp"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:boxStrokeColor="@color/gray1"
    app:hintTextColor="@color/gray1"
    android:textColorHint="@color/gray1"
    app:prefixText="+91"
    app:prefixTextColor="@color/white">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_fp"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/mobile"
        android:inputType="number"
        tools:ignore="VisualLintTextFieldSize"
        android:layout_marginBottom="15dp"/>
</com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/reset_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/button"
    android:text="@string/reset_password"
    android:textSize="15sp"
    android:textAllCaps="false"
    android:textColor="@color/white"
    tools:ignore="TextContrastCheck" />
</LinearLayout>








