<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".signupndlogin.fragment.CreatePassword"
android:background="@color/black1"
android:orientation="vertical">
<TextView
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:id="@+id/login_text1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_new_password"
    android:textColor="@color/white"
    android:textSize="24sp"
    android:textStyle="bold"/>
<TextView
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:id="@+id/login_text2"
    android:textAlignment="textStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:text="@string/create_strong_and_secured_new_password"
    android:textColor="#817F7F"
    android:textSize="16sp" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    app:boxCornerRadiusBottomEnd="15dp"
    app:boxCornerRadiusTopEnd="15dp"
    app:boxCornerRadiusBottomStart="15dp"
    app:boxCornerRadiusTopStart="15dp"
    app:boxStrokeColor="@color/gray1"
    app:hintTextColor="@color/gray1"
    android:textColorHint="@color/gray1"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/gray1"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:textColorHint="@color/gray1"
        android:textCursorDrawable="@null"
        android:id="@+id/npassword"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="VisualLintTextFieldSize" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/gray1"
        app:hintTextColor="@color/gray1"
        android:textColorHint="@color/gray1"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ncpassword"
            android:textColorHint="@color/gray1"
            android:textCursorDrawable="@null"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>
</com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/savePassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/button"
    android:text="@string/save_password"
    android:textAllCaps="false"
    android:textColor="@color/white"
    tools:ignore="TextContrastCheck"
    android:layout_marginBottom="10dp"/>

</LinearLayout>



